--- a/reg_empleados.html
+++ b/reg_empleados.html
@@ -18,7 +18,7 @@
 
 <div id="menuv">
   <ul>
-      <li><a href="#menuv" id="search">Actualizar Empleados</a></li>
+      <li><a href="SAemp.php" id="search">Ver Empleados</a></li>
       <li><a href="#menuv" id="update">Buscar</a></li>
       <li><a href="#menuv" id="delete">Borrar</a></li>    
   </ul>
